[gd_scene load_steps=6 format=3 uid="uid://dlgjtppuhh3av"]

[ext_resource type="Texture2D" uid="uid://m4ub6oll4ikv" path="res://Assets/Invaders/Invader3-1.png" id="1_jwo4l"]
[ext_resource type="Script" path="res://Scripts/start_screen.gd" id="1_n8b48"]
[ext_resource type="FontFile" uid="uid://ch103gi2tob72" path="res://Assets/font/andina.ttf" id="2_2l0xe"]
[ext_resource type="Texture2D" uid="uid://bn227mp3yqjlo" path="res://Assets/Invaders/Invader2-1.png" id="3_ehgkd"]
[ext_resource type="Texture2D" uid="uid://dy2h5dklc8h7p" path="res://Assets/Invaders/Invader1-1.png" id="4_djq1y"]

[node name="start_screen" type="CanvasLayer"]
script = ExtResource("1_n8b48")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = -1
anchor_left = 0.255
anchor_top = 0.375
anchor_right = 0.745
anchor_bottom = 0.813
offset_left = 0.23996
offset_top = -195.0
offset_right = 43.7599
offset_bottom = 68.176
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_2l0xe")
theme_override_font_sizes/font_size = 108
text = "SPACE 
INVADERS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="InvaderContainer_1" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Invader1Texture" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/InvaderContainer_1"]
texture_filter = 1
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("1_jwo4l")

[node name="Invader1Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/InvaderContainer_1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2l0xe")
theme_override_font_sizes/font_size = 30
text = "= 10 POINTS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InvaderContainer_2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Invader2Texture" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/InvaderContainer_2"]
texture_filter = 1
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
texture = ExtResource("3_ehgkd")

[node name="Invader2Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/InvaderContainer_2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2l0xe")
theme_override_font_sizes/font_size = 30
text = "= 20 POINTS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InvaderContainer_3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Invader3Texture" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/InvaderContainer_3"]
texture_filter = 1
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("4_djq1y")

[node name="Invader3Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/InvaderContainer_3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2l0xe")
theme_override_font_sizes/font_size = 30
text = "= 40 POINTS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2l0xe")
theme_override_font_sizes/font_size = 40
text = "PLAY SPACE INVADERS"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/Button" to="." method="load_game"]
[connection signal="timeout" from="Timer" to="." method="show_next_control"]
